--------------------------------------------------------------------------------------------------
Release notes version 1.9.2_beta : Enhancements, modifications and corrected bugs since version 1.9.1 :
--------------------------------------------------------------------------------------------------
03/01/23 (TRUST) Major Change : For Pb_Multiphase, simple calls are now applied to compute fluid/saturations properties (improve significantly the performance especially with libraries like EOS, RefProp, ...)
03/01/23 (TRUST) Major Change : Homogeneous Neumann boundary condition (BC) is applied on the velocity field if a fixed pressure BC is prescribed at an open boundary.
19/12/22 (TRUST) Output       : if -journal verbosity set to a value >=1 when running computation, log files will be written even if nbproc > 5120
--------------------------------------------------------------------------------------------------
Release notes version 1.9.1 : Enhancements, modifications and corrected bugs since version 1.9.0 :
--------------------------------------------------------------------------------------------------
17/11/22 (TRUST)  Output      : Field unit if known added into .son files
24/10/22 (TRUST)  New option  : Post-processing can now be done on a sub-zone of the domain (available only in sequential)
19/10/22 (TRUST)  Portability : Cygwin build on Windows is supported (but not regularly tested yet)
19/10/22 (TRUST)  New keyword : Keyword "muscl_new" VEF convective scheme which really respect monotonicity contrary to "muscl" one, though at higher CPU cost for the moment: see QC_temperature_bounds_MUSCL validation sheet
19/10/22 (TRUST)  New solvers : Add rocALUTION library for CPU and/or AMD GPU (need ROCm 5.x recent environment). Syntax: solveur_pression rocALUTION gcp|gmres|... { precond ... { ... } seuil ... }