@@ -104,8 +104,8 @@ void Sonde::completer()
   //On devrait acceder au domaine par le champ generique
   //Mais reference pas encore faite
   Probleme_base& Pb = mon_post->probleme();
-  const Motcle& nom_domaine = Pb.domaine().le_nom();
-
+  //const Motcle& nom_domaine = Pb.domaine().le_nom();
+  const Motcle nom_domaine = mon_post->domaine().le_nom();
   Motcle nom_champ_ref;
   Motcle nom_macro=nom_champ_lu_;
   Motcle nom_macro_test, nom1("_not_def"), nom2("_not_def");
@@ -241,7 +241,8 @@ Entree& Sonde::readOn(Entree& is)
       //le nom du champ auquel on fait reference et non pas une composante de ce champ
       REF(Champ_base) champ_ref = Pb.get_champ(nom_champ_lu_);
       const Nom& le_nom_champ = champ_ref->le_nom();
-      const Motcle& nom_domaine = Pb.domaine().le_nom();
+      //const Motcle& nom_domaine = Pb.domaine().le_nom();
+      const Motcle nom_domaine = mon_post->domaine().le_nom();
       Motcle identifiant;
 
       identifiant = Motcle(le_nom_champ)+"_natif_"+nom_domaine;
